force-app/main/default/objects/External_Attendee__c/External_Attendee__c.object-meta.xml
<CustomObject>
    <label>External Attendee</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>